==> imwangwang/stm32_home_growbox/tm_stm32frtc/tm_stm32f4_rtc.c <==
#include "tm_stm32f4_rtc.h"
#define FEBRUARY		2
#define	STARTOFTIME		1970
#define SECDAY			86400L
#define SECYR			(SECDAY * 365)
#define	leapyear(year)		((year) % 4 == 0)
#define	days_in_year(a) 	(leapyear(a) ? 366 : 365)
#define	days_in_month(a) 	(month_days[(a) - 1])

uint32_t TM_RTC_Init(TM_RTC_ClockSource_t source) {
	uint32_t status;
	uint8_t stat = 1;
	TM_RTC_t datatime;
	
	/* Enable PWR peripheral clock */
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_PWR | RCC_APB1Periph_BKP, ENABLE);

	/* Allow access to BKP Domain */
	PWR_BackupAccessCmd(ENABLE);
	
	/* Get RTC status */
	status = BKP_ReadBackupRegister(RTC_STATUS_REG);
	
	if (status == RTC_STATUS_TIME_OK) {
		TM_RTC_Status = RTC_STATUS_TIME_OK;
		
		/* Start internal clock if we choose internal clock */
		if (source == TM_RTC_ClockSource_Internal) {
			TM_RTC_Config(TM_RTC_ClockSource_Internal);
		}
		
		/* Wait for RTC APB registers synchronisation (needed after start-up from Reset) */
		RTC_WaitForSynchro();
		
		/* Clear interrupt flags */
		RTC_ClearITPendingBit(RTC_IT_ALR);
		EXTI_ClearITPendingBit(EXTI_Line17);
		
		/* Get date and time */
		TM_RTC_GetDateTime(&datatime);
	} else if (status == RTC_STATUS_INIT_OK) {
		TM_RTC_Status = RTC_STATUS_INIT_OK;
		
		/* Start internal clock if we choose internal clock */
		if (source == TM_RTC_ClockSource_Internal) {
			TM_RTC_Config(TM_RTC_ClockSource_Internal);
		}
		
		/* Wait for RTC APB registers synchronisation (needed after start-up from Reset) */
		RTC_WaitForSynchro();
		
		/* Clear interrupt flags */
		RTC_ClearITPendingBit(RTC_IT_ALR);
		EXTI_ClearITPendingBit(EXTI_Line17);
		
		/* Get date and time */
		TM_RTC_GetDateTime(&datatime);
	} else {
		TM_RTC_Status = RTC_STATUS_ZERO;
		/* Return status = 0 -> RTC Never initialized before */
		stat = RTC_STATUS_ZERO;
		/* Config RTC */
		TM_RTC_Config(source);
		
		/* Set date and time */
		datatime.tm_mday = 1;
		datatime.tm_wday= 1;
		datatime.tm_mon= 1;
		datatime.tm_year = 0;
		datatime.tm_hour = 0;
		datatime.tm_min = 0;
		datatime.tm_sec = 0;
		
		/* Set date and time */
		TM_RTC_SetDateTime(&datatime);
		
		/* Initialized OK */
		TM_RTC_Status = RTC_STATUS_INIT_OK;
	}
	/* If first time initialized */
	if (stat == RTC_STATUS_ZERO) {
		return 0;
	}
	return TM_RTC_Status;
}

TM_RTC_Result_t TM_RTC_SetDateTime(TM_RTC_t* data) {

	RTC_WaitForLastTask();
	GregorianDay(data);	
	RTC_SetCounter(mktimev(data));
	RTC_WaitForLastTask();
	
	if (TM_RTC_Status != RTC_STATUS_ZERO) {
		/* Write backup registers */
		BKP_WriteBackupRegister(RTC_STATUS_REG, RTC_STATUS_TIME_OK);
	}
	
	/* Return OK */
	return TM_RTC_Result_Ok;
}

TM_RTC_Result_t TM_RTC_SetDateTimeString(char* str) {
	TM_RTC_t tmp;
	uint8_t i = 0;
	
	/* Get date */
	tmp.tm_mday = 0;
	while (TM_RTC_CHARISNUM(*(str + i))) {
		tmp.tm_mday = tmp.tm_mday * 10 + TM_RTC_CHAR2NUM(*(str + i));
		i++;
	}
	i++;
	
	/* Get month */
	tmp.tm_mon = 0;
	while (TM_RTC_CHARISNUM(*(str + i))) {
		tmp.tm_mon = tmp.tm_mon * 10 + TM_RTC_CHAR2NUM(*(str + i));
		i++;
	}
	i++;
	
	/* Get year */
	tmp.tm_year = 0;
	while (TM_RTC_CHARISNUM(*(str + i))) {
		tmp.tm_year = tmp.tm_year * 10 + TM_RTC_CHAR2NUM(*(str + i));
		i++;
	}
	i++;
		
	/* Get hours */
	tmp.tm_hour = 0;
	while (TM_RTC_CHARISNUM(*(str + i))) {
		tmp.tm_hour = tmp.tm_hour * 10 + TM_RTC_CHAR2NUM(*(str + i));
		i++;
	}
	i++;
	
	/* Get minutes */
	tmp.tm_min = 0;
	while (TM_RTC_CHARISNUM(*(str + i))) {
		tmp.tm_min = tmp.tm_min * 10 + TM_RTC_CHAR2NUM(*(str + i));
		i++;
	}
	i++;
	
	/* Get seconds */
	tmp.tm_sec = 0;
	while (TM_RTC_CHARISNUM(*(str + i))) {
		tmp.tm_sec = tmp.tm_sec * 10 + TM_RTC_CHAR2NUM(*(str + i));
		i++;
	}
	i++;
	
	/* Return status from set date time function */
	return TM_RTC_SetDateTime(&tmp);
}

void TM_RTC_GetDateTime(TM_RTC_t* data) {
	uint32_t unix;

	unix = RTC_GetCounter();
	to_tm(unix, data);
}

void TM_RTC_Config(TM_RTC_ClockSource_t source) {
	if (source == TM_RTC_ClockSource_Internal) {
		/* Enable the LSI OSC */
		RCC_LSICmd(ENABLE);

		/* Wait till LSI is ready */
		while (RCC_GetFlagStatus(RCC_FLAG_LSIRDY) == RESET);

		/* Select the RTC Clock Source */
		RCC_RTCCLKConfig(RCC_RTCCLKSource_LSI);
	} else if (source == TM_RTC_ClockSource_External) {
		/* Enable the LSE OSC */
		RCC_LSEConfig(RCC_LSE_ON);

		/* Wait till LSE is ready */ 
		while (RCC_GetFlagStatus(RCC_FLAG_LSERDY) == RESET);

		/* Select the RTC Clock Source */
		RCC_RTCCLKConfig(RCC_RTCCLKSource_LSE);
	}
	
	/* Enable the RTC Clock */
	RCC_RTCCLKCmd(ENABLE);
	
	/* Wait for register synchronization */
	RTC_WaitForSynchro();

	/* Write status */
	BKP_WriteBackupRegister(RTC_STATUS_REG, RTC_STATUS_INIT_OK);
}

void TM_RTC_Interrupts(TM_RTC_Int_t int_value) {
	uint32_t int_val;
	
	/* Clear pending bit */
	EXTI_ClearITPendingBit(EXTI_Line17);

	/* NVIC init for RTC */
	NVIC_InitStruct.NVIC_IRQChannel = RTC_IRQn;
	NVIC_InitStruct.NVIC_IRQChannelPreemptionPriority = RTC_PRIORITY;
	NVIC_InitStruct.NVIC_IRQChannelSubPriority = RTC_WAKEUP_SUBPRIORITY;
	
	/* RTC connected to EXTI_Line22 */
	EXTI_InitStruct.EXTI_Line = EXTI_Line17;
	EXTI_InitStruct.EXTI_Mode = EXTI_Mode_Interrupt;
	EXTI_InitStruct.EXTI_Trigger = EXTI_Trigger_Rising;
	
	if (int_value == TM_RTC_Int_Disable) {
		/* Disable RTC interrupt flag */
		RTC_ITConfig(RTC_IT_SEC, DISABLE);
		
		/* Disable NVIC */
		NVIC_InitStruct.NVIC_IRQChannelCmd = DISABLE;
		NVIC_Init(&NVIC_InitStruct); 
		/* Disable EXT1 interrupt */
		EXTI_InitStruct.EXTI_LineCmd = DISABLE;
		EXTI_Init(&EXTI_InitStruct);
	} else {
		/* Enable NVIC */
		NVIC_InitStruct.NVIC_IRQChannelCmd = ENABLE;
		NVIC_Init(&NVIC_InitStruct); 
		/* Enable EXT1 interrupt */
		EXTI_InitStruct.EXTI_LineCmd = ENABLE;
		EXTI_Init(&EXTI_InitStruct);


		if (int_value == TM_RTC_Int_30s) {
			int_val = 0xFFFFF;		/* 30 seconds */
		} else if (int_value == TM_RTC_Int_15s) {
			int_val = 0x7FFFF;		/* 15 seconds */
		} else if (int_value == TM_RTC_Int_10s) {
			int_val = 0x3FFFF;		/* 10 seconds */
		} else if (int_value == TM_RTC_Int_5s) {
			int_val = 0x1FFFF;		/* 5 seconds */
		} else if (int_value == TM_RTC_Int_2s) {
			int_val = 0xFFFF;		/* 2 seconds */
		} else if (int_value == TM_RTC_Int_1s) {
			int_val = 0x7FFF;		/* 1 second */
		} else if (int_value == TM_RTC_Int_500ms) {
			int_val = 0x7FFF >> 1;		/* 500 ms */
		} else if (int_value == TM_RTC_Int_250ms) {
			int_val = 0x7FFF >> 2;		/* 250 ms */
		} else if (int_value == TM_RTC_Int_125ms) {
			int_val = 0x7FFF >> 3;		/* 125 ms */
		}		
		/* Wait for RTC APB registers synchronisation */
		RTC_WaitForSynchro();
		/* Set RTC wakeup counter */
		RTC_SetPrescaler(int_val);
		/* Wait until last write operation on RTC registers has finished */
		RTC_WaitForLastTask();
		/* Enable wakeup interrupt */
	 	RTC_ITConfig(RTC_IT_SEC, ENABLE);
	 	RTC_WaitForLastTask();		
	}
}

void TM_RTC_DisableAlarm(TM_RTC_Alarm_t Alarm) {
	/* we only support one alarm on stm32F103 board */
	switch (Alarm) {
		case TM_RTC_Alarm_A:
		case TM_RTC_Alarm_B:		
		    /* Wait till RTC Second event occurs */
		    RTC_ClearFlag(RTC_FLAG_SEC);
    		while(RTC_GetFlagStatus(RTC_FLAG_SEC) == RESET);
			/* Disable Alarm B interrupt */
			RTC_ITConfig(RTC_IT_ALR, DISABLE);
		
			/* Clear Alarm B pending bit */
			RTC_ClearFlag(RTC_IT_ALR);
			break;
		default:
			break;
	}
	
	/* Clear RTC Alarm pending bit */
	EXTI_ClearITPendingBit(EXTI_Line17);
	
	/* Configure EXTI 17 as interrupt */
	EXTI_InitStruct.EXTI_Line = EXTI_Line17;
	EXTI_InitStruct.EXTI_Mode = EXTI_Mode_Interrupt;
	EXTI_InitStruct.EXTI_Trigger = EXTI_Trigger_Rising;
	EXTI_InitStruct.EXTI_LineCmd = ENABLE;
	
	/* Initialite Alarm EXTI interrupt */
	EXTI_Init(&EXTI_InitStruct);

	NVIC_PriorityGroupConfig(NVIC_PriorityGroup_2);
	/* Configure the RTC Alarm Interrupt */
	NVIC_InitStruct.NVIC_IRQChannel = RTCAlarm_IRQn;
	NVIC_InitStruct.NVIC_IRQChannelPreemptionPriority = RTC_PRIORITY;
	NVIC_InitStruct.NVIC_IRQChannelSubPriority = RTC_ALARM_SUBPRIORITY;
	NVIC_InitStruct.NVIC_IRQChannelCmd = ENABLE;
	
	/* Initialize RTC Alarm Interrupt */
	NVIC_Init(&NVIC_InitStruct);
}

void RTCAlarm_IRQHandler(void) {
	if (RTC_GetITStatus(RTC_IT_ALR) != RESET) {
		/* Clear RTC Alarm A interrupt flag */
		RTC_ClearITPendingBit(RTC_IT_ALR);
		
		/* Call user function for Alarm A */
		TM_RTC_AlarmAHandler();
	}
		
	/* Clear EXTI line 17 bit */
	EXTI_ClearITPendingBit(EXTI_Line17);
}
